--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@ font-size: 14px;
     <div><b>Kỹ năng: </b> Html, Css, Js, ReactJS, ReactNative, VueJS, NodeJS, MySQL, MongoDB</div>
     <div><b>Kinh nghiệm: </b> Dự án quản lý khách sạn Hotel Maria</div>
     <div><b>Định hướng phát triển: </b> Theo MERN stack: MongoDB, ExpressJS, ReactJS, NodeJS</div>
+    <div><b>Hiện tại, tôi đang học: </b><a href="https://threejs.org/">ThreeJS</a></div>
     <hr>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/qFWy6dynBcY?si=aKPuAAi1JlwEMBKE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <p>&copy; Copyright John Doe</p>
 </div>
-
-
 </body>
 </html>
