Add ul, li tags into index.html

--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@ font-size: 14px;
     <img src="./profile.png" alt="Profile Picture">
     <h2>John Doe</h2>
     <p>Fullstack Developer</p>
-    <div><b>Địa chỉ: </b> Số 8 Trần Duy Hưng</div>
-    <div><b>Số điện thoại: </b> 04343253112</div>
-    <div><b>Email: </b> abc@example.com</div>
+    <h3>Thông tin cá nhân:</h3>
+    <ul>
+        <li><div><b>Địa chỉ: </b> Số 8 Trần Duy Hưng</div></li>
+        <li><div><b>Số điện thoại: </b> 04343253112</div></li>
+        <li><div><b>Email: </b> abc@example.com</div></li>
+    </ul>
     <div><b>Học vấn: </b> Ứng dụng web bằng ReactJS, ứng dụng mobile bằng React Native</div>
     <div><b>Bằng cấp: </b> Cử nhân công nghệ thông tin</div>
     <div><b>Kỹ năng: </b> Html, Css, Js, ReactJS, ReactNative, VueJS, NodeJS, MySQL, MongoDB</div>
